--- a/hotelmenu/cook/cook.html
+++ b/hotelmenu/cook/cook.html
@@ -33,9 +33,10 @@
                     {% endfor %}
                     <form method="POST" action="{% url 'cook_site' %}">
                         {% csrf_token %}
-                        <input type="hidden" name="person_id" value="{{person_id}}">
-                        <button type="submit" id="{{ person_id }}submit" class="submit-btn">Complete</button>
+                        <input type="hidden" name="person" value="{{ person }}">
+                        <button type="submit" id="submit" class="submit-btn">Complete</button>
                     </form>
+                    
                 </div>
             </div>
             {% endfor %}
