--- a/hotelmenu/bill_site/user_bill.html
+++ b/hotelmenu/bill_site/user_bill.html
@@ -2,78 +2,45 @@
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Bill</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        .bill-container {
-            border: 1px solid #ccc;
-            padding: 20px;
-            max-width: 600px;
-            margin: 0 auto;
-        }
-        .bill-header {
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        .bill-details {
-            margin-bottom: 20px;
-        }
-        .bill-items {
-            margin-bottom: 20px;
-        }
-        .bill-items table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        .bill-items th, .bill-items td {
-            padding: 8px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-        .bill-total {
-            font-weight: bold;
-        }
-    </style>
-</head>
-<body>
+    <link rel="stylesheet" href="{% static '../static/bill_site_content/user_bill.css' %}">
+  </head>
+  <body>
     <div class="bill-container">
-        <div class="bill-header">
-            <h1>Hotel Bill</h1>
-        </div>
-        <div class="bill-details">
-            <p>Customer: {{ existing_order.customer_id.person_name }}</p>
-            <p>Order Date: {{ existing_order.order_date }}</p>
-        </div>
-        <div class="bill-items">
-            <h2>Items</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Item</th>
-                        <th>Quantity</th>
-                        <th>Price (₹)</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for item in existing_order.items %}
-                    <tr>
-                        <td>{{ item.name }}</td>
-                        <td>{{item.quantity}}</td>
-                        <td>{{ item.price }}</td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
-        </div>
-        <div class="bill-total">
-            <p>Total Amount: ₹  {{ existing_order.total_amount }}</p>
-        </div>
+      <div class="bill-header">
+        <h1>Hotel Bill</h1>
+      </div>
+      <div class="bill-details">
+        <p>Customer: {{ existing_order.customer_id.person_name }}</p>
+        <p>Order Date: {{ existing_order.order_date }}</p>
+      </div>
+      <div class="bill-items">
+        <h2>Items</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>Item</th>
+              <th>Quantity</th>
+              <th>Price (₹)</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for item in existing_order.items %}
+            <tr>
+              <td>{{ item.name }}</td>
+              <td>{{item.quantity}}</td>
+              <td>{{ item.price }}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+      <div class="bill-total">
+        <p>Total Amount: ₹ {{ existing_order.total_amount }}</p>
+      </div>
     </div>
-</body>
+  </body>
 </html>
